@@ -1,3 +1,6 @@
+6 March 2017: Wouter
+	- Fix #1229: Systemd service sandboxing in contrib/unbound.service.
+
 28 February 2017: Ralph
 	- Fix testpkts.c, check if DO bit is set, not only if there is an OPT
 	  record.
